{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 535,
  "lineage": "b43130c9-4023-e638-94c6-aecf41e58c4c",
  "resources": [
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:internet-gateway/igw-09f86ee0d0c410808",
            "id": "igw-09f86ee0d0c410808",
            "owner_id": "390403881443",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "p-igw"
            },
            "tags_all": {
              "Name": "p-igw"
            },
            "vpc_id": "vpc-043e909c74bdae9b1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02835aed2a5cb1d2a",
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:instance/i-0158afd45af1f62d2",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "bastion-instance-profile",
            "id": "i-0158afd45af1f62d2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00e38bbe80c4b0d1b",
            "private_dns": "ip-10-0-1-4.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.4",
            "public_ip": "43.201.0.119",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-092473e353971542b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0461823011c090076",
            "tags": {
              "Name": "bastion-host"
            },
            "tags_all": {
              "Name": "bastion-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c8dfe4ea60ba7532"
            ]
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.bastion_profile",
            "module.iam.aws_iam_role.bastion_role",
            "module.iam.aws_iam_role_policy_attachment.bastion_ssm_core",
            "module.instance.data.aws_ami.ubuntu_2204",
            "module.sg.aws_security_group.bastion_sg",
            "module.subnet.aws_subnet.public",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "kubernetes-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02835aed2a5cb1d2a",
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:instance/i-0246697123f5795e7",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0246697123f5795e7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0be181e849b97e958",
            "private_dns": "ip-10-0-11-246.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.11.246",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ab0fd8a099dc5264",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a4482522da77117a",
            "tags": {
              "Name": "kubernetes-master"
            },
            "tags_all": {
              "Name": "kubernetes-master"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c7a632808092c89f"
            ]
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.bastion_profile",
            "module.iam.aws_iam_role.bastion_role",
            "module.iam.aws_iam_role_policy_attachment.bastion_ssm_core",
            "module.instance.data.aws_ami.ubuntu_2204",
            "module.sg.aws_security_group.master_node_sg",
            "module.subnet.aws_subnet.private",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "kubernetes-worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02835aed2a5cb1d2a",
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:instance/i-026bb2269bf033277",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-026bb2269bf033277",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00435a5018af9cd8d",
            "private_dns": "ip-10-0-11-37.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.11.37",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e1787977a7ce8d42",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a4482522da77117a",
            "tags": {
              "Name": "kubernetes-worker-1"
            },
            "tags_all": {
              "Name": "kubernetes-worker-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03694ed51f86f59b7"
            ]
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.bastion_profile",
            "module.iam.aws_iam_role.bastion_role",
            "module.iam.aws_iam_role_policy_attachment.bastion_ssm_core",
            "module.instance.data.aws_ami.ubuntu_2204",
            "module.sg.aws_security_group.worker_node_sg",
            "module.subnet.aws_subnet.private",
            "module.vpc.aws_vpc.project"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02835aed2a5cb1d2a",
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:instance/i-02a524341003e955f",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02a524341003e955f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-064d1bd10b2d996db",
            "private_dns": "ip-10-0-11-127.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.11.127",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bf76fb8f12f7214c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a4482522da77117a",
            "tags": {
              "Name": "kubernetes-worker-2"
            },
            "tags_all": {
              "Name": "kubernetes-worker-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03694ed51f86f59b7"
            ]
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.bastion_profile",
            "module.iam.aws_iam_role.bastion_role",
            "module.iam.aws_iam_role_policy_attachment.bastion_ssm_core",
            "module.instance.data.aws_ami.ubuntu_2204",
            "module.sg.aws_security_group.worker_node_sg",
            "module.subnet.aws_subnet.private",
            "module.vpc.aws_vpc.project"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02835aed2a5cb1d2a",
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:instance/i-07412f7ec4016012c",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07412f7ec4016012c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f1b738a6476ab991",
            "private_dns": "ip-10-0-11-58.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.11.58",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f1ad48d50347a33e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a4482522da77117a",
            "tags": {
              "Name": "kubernetes-worker-3"
            },
            "tags_all": {
              "Name": "kubernetes-worker-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03694ed51f86f59b7"
            ]
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.bastion_profile",
            "module.iam.aws_iam_role.bastion_role",
            "module.iam.aws_iam_role_policy_attachment.bastion_ssm_core",
            "module.instance.data.aws_ami.ubuntu_2204",
            "module.sg.aws_security_group.worker_node_sg",
            "module.subnet.aws_subnet.private",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d1385cb02ee7e270",
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:elastic-ip/eipalloc-0d1385cb02ee7e270",
            "association_id": "eipassoc-02ca6dcb0bc7b332e",
            "domain": "vpc",
            "id": "eipalloc-0d1385cb02ee7e270",
            "instance": "i-0cd471a1a48e20fe4",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0d6c80a22396c8ef5",
            "private_dns": "ip-10-0-1-183.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.183",
            "public_dns": "ec2-13-209-249-45.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.209.249.45",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.nat.aws_instance.nat",
            "module.subnet.aws_subnet.public",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01ad0c7a4930f0e43",
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:instance/i-0cd471a1a48e20fe4",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cd471a1a48e20fe4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d6c80a22396c8ef5",
            "private_dns": "ip-10-0-1-183.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.183",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0ef443e5c88069b52",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0461823011c090076",
            "tags": {
              "Name": "nat-instance"
            },
            "tags_all": {
              "Name": "nat-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0921ef49cbc07042b"
            ]
          },
          "dependencies": [
            "module.subnet.aws_subnet.public",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.route",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e198787a69907d061080289494",
            "instance_id": "i-0cd471a1a48e20fe4",
            "instance_owner_id": "390403881443",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-0d6c80a22396c8ef5",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0e198787a69907d06",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat.aws_instance.nat",
            "module.route.aws_route_table.private_rt",
            "module.subnet.aws_subnet.public",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.route",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:route-table/rtb-0e198787a69907d06",
            "id": "rtb-0e198787a69907d06",
            "owner_id": "390403881443",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-09b325f9c3fd9e8d5",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-043e909c74bdae9b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.route",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:route-table/rtb-0b872b308b950fe0e",
            "id": "rtb-0b872b308b950fe0e",
            "owner_id": "390403881443",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09f86ee0d0c410808",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-043e909c74bdae9b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.route",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-subnet-a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0055b065f00af008f",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0e198787a69907d06",
            "subnet_id": "subnet-0a4482522da77117a"
          },
          "dependencies": [
            "module.route.aws_route_table.private_rt",
            "module.subnet.aws_subnet.private",
            "module.vpc.aws_vpc.project"
          ]
        },
        {
          "index_key": "private-subnet-c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2f69c416a558ae9",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0e198787a69907d06",
            "subnet_id": "subnet-0bf88f275f92d6222"
          },
          "dependencies": [
            "module.route.aws_route_table.private_rt",
            "module.subnet.aws_subnet.private",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.route",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-subnet-a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f325eff4a413d931",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0b872b308b950fe0e",
            "subnet_id": "subnet-0461823011c090076"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.route.aws_route_table.public_rt",
            "module.subnet.aws_subnet.public",
            "module.vpc.aws_vpc.project"
          ]
        },
        {
          "index_key": "public-subnet-c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ba0ca72428bbb24",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0b872b308b950fe0e",
            "subnet_id": "subnet-0001cd0e49b1902f2"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.route.aws_route_table.public_rt",
            "module.subnet.aws_subnet.public",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:security-group/sg-0c8dfe4ea60ba7532",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c8dfe4ea60ba7532",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "390403881443",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-043e909c74bdae9b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "master_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:security-group/sg-0c7a632808092c89f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c7a632808092c89f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03694ed51f86f59b7"
                ],
                "self": true,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 10257,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 10257
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 10259,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 10259
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c8dfe4ea60ba7532"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 2380
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03694ed51f86f59b7"
                ],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "master-node-sg",
            "name_prefix": "",
            "owner_id": "390403881443",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "k8s-master-node-sg"
            },
            "tags_all": {
              "Name": "k8s-master-node-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-043e909c74bdae9b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:security-group/sg-05018238cd35c63f2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05018238cd35c63f2",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow MySQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "390403881443",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-sg"
            },
            "tags_all": {
              "Name": "rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-043e909c74bdae9b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:security-group/sg-03694ed51f86f59b7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03694ed51f86f59b7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c7a632808092c89f"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c8dfe4ea60ba7532"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c7a632808092c89f"
                ],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "worker-node-sg",
            "name_prefix": "",
            "owner_id": "390403881443",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "k8s-worker-node-sg"
            },
            "tags_all": {
              "Name": "k8s-worker-node-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-043e909c74bdae9b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cp_api_from_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 6443,
            "id": "sgrule-3274347239",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-2",
            "security_group_id": "sg-0c7a632808092c89f",
            "security_group_rule_id": "sgr-07914548074c17ac9",
            "self": false,
            "source_security_group_id": "sg-03694ed51f86f59b7",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.master_node_sg",
            "module.sg.aws_security_group.worker_node_sg",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cp_controller_mgr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10257,
            "id": "sgrule-2438548655",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-2",
            "security_group_id": "sg-0c7a632808092c89f",
            "security_group_rule_id": "sgr-02f7502ee017ac8de",
            "self": false,
            "source_security_group_id": "sg-0c7a632808092c89f",
            "timeouts": null,
            "to_port": 10257,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.master_node_sg",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cp_egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1762006877",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "ap-northeast-2",
            "security_group_id": "sg-0c7a632808092c89f",
            "security_group_rule_id": "sgr-0aae6863b7b7520b5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.master_node_sg",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cp_etcd_peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2379,
            "id": "sgrule-4147946232",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-2",
            "security_group_id": "sg-0c7a632808092c89f",
            "security_group_rule_id": "sgr-0cb4fa26f3845d343",
            "self": false,
            "source_security_group_id": "sg-0c7a632808092c89f",
            "timeouts": null,
            "to_port": 2380,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.master_node_sg",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cp_kubelet_from_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10250,
            "id": "sgrule-2971570035",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-2",
            "security_group_id": "sg-0c7a632808092c89f",
            "security_group_rule_id": "sgr-0d25c9c09402af013",
            "self": false,
            "source_security_group_id": "sg-03694ed51f86f59b7",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.master_node_sg",
            "module.sg.aws_security_group.worker_node_sg",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cp_kubelet_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10250,
            "id": "sgrule-480771534",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-2",
            "security_group_id": "sg-0c7a632808092c89f",
            "security_group_rule_id": "sgr-0eb9ed316ee1b0912",
            "self": false,
            "source_security_group_id": "sg-0c7a632808092c89f",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.master_node_sg",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cp_scheduler",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10259,
            "id": "sgrule-1372923948",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-2",
            "security_group_id": "sg-0c7a632808092c89f",
            "security_group_rule_id": "sgr-07c2e9f6e0923475b",
            "self": false,
            "source_security_group_id": "sg-0c7a632808092c89f",
            "timeouts": null,
            "to_port": 10259,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.master_node_sg",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cp_ssh_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-3688205736",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-2",
            "security_group_id": "sg-0c7a632808092c89f",
            "security_group_rule_id": "sgr-0d0216a817e2d54c3",
            "self": false,
            "source_security_group_id": "sg-0c8dfe4ea60ba7532",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.bastion_sg",
            "module.sg.aws_security_group.master_node_sg",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_api_to_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 6443,
            "id": "sgrule-1130820676",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-2",
            "security_group_id": "sg-03694ed51f86f59b7",
            "security_group_rule_id": "sgr-076e20ccc2c04be7f",
            "self": false,
            "source_security_group_id": "sg-0c7a632808092c89f",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.master_node_sg",
            "module.sg.aws_security_group.worker_node_sg",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2634472837",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "ap-northeast-2",
            "security_group_id": "sg-03694ed51f86f59b7",
            "security_group_rule_id": "sgr-0c248b774853d2383",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.worker_node_sg",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_kubelet_from_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10250,
            "id": "sgrule-3527162777",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-2",
            "security_group_id": "sg-03694ed51f86f59b7",
            "security_group_rule_id": "sgr-0ba36033c1ea67c0d",
            "self": false,
            "source_security_group_id": "sg-0c7a632808092c89f",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.master_node_sg",
            "module.sg.aws_security_group.worker_node_sg",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_nodeport",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 30000,
            "id": "sgrule-1899722398",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-2",
            "security_group_id": "sg-03694ed51f86f59b7",
            "security_group_rule_id": "sgr-0a4691727ba010fd3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.worker_node_sg",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_self_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-3073994763",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "ap-northeast-2",
            "security_group_id": "sg-03694ed51f86f59b7",
            "security_group_rule_id": "sgr-03baba8906f3fdc13",
            "self": false,
            "source_security_group_id": "sg-03694ed51f86f59b7",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.worker_node_sg",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ssh_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-4294778205",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-2",
            "security_group_id": "sg-03694ed51f86f59b7",
            "security_group_rule_id": "sgr-05b1da1d08f3799c0",
            "self": false,
            "source_security_group_id": "sg-0c8dfe4ea60ba7532",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.bastion_sg",
            "module.sg.aws_security_group.worker_node_sg",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-subnet-a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:subnet/subnet-0a4482522da77117a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a4482522da77117a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390403881443",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "private-subnet-a"
            },
            "tags_all": {
              "Name": "private-subnet-a"
            },
            "vpc_id": "vpc-043e909c74bdae9b1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project"
          ]
        },
        {
          "index_key": "private-subnet-c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:subnet/subnet-0bf88f275f92d6222",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf88f275f92d6222",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390403881443",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "private-subnet-c"
            },
            "tags_all": {
              "Name": "private-subnet-c"
            },
            "vpc_id": "vpc-043e909c74bdae9b1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "db-subnet-a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:subnet/subnet-027d43b26a2edf601",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-027d43b26a2edf601",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390403881443",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "db-subnet-a"
            },
            "tags_all": {
              "Name": "db-subnet-a"
            },
            "vpc_id": "vpc-043e909c74bdae9b1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project"
          ]
        },
        {
          "index_key": "db-subnet-c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:subnet/subnet-0f89030dc241fd007",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f89030dc241fd007",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390403881443",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "db-subnet-c"
            },
            "tags_all": {
              "Name": "db-subnet-c"
            },
            "vpc_id": "vpc-043e909c74bdae9b1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-subnet-a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:subnet/subnet-0461823011c090076",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0461823011c090076",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "390403881443",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "public-subnet-a"
            },
            "tags_all": {
              "Name": "public-subnet-a"
            },
            "vpc_id": "vpc-043e909c74bdae9b1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project"
          ]
        },
        {
          "index_key": "public-subnet-c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:subnet/subnet-0001cd0e49b1902f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0001cd0e49b1902f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "390403881443",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "public-subnet-c"
            },
            "tags_all": {
              "Name": "public-subnet-c"
            },
            "vpc_id": "vpc-043e909c74bdae9b1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:vpc/vpc-043e909c74bdae9b1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0277dc9f52e570540",
            "default_route_table_id": "rtb-0807fe3e39e2f90ac",
            "default_security_group_id": "sg-0921ef49cbc07042b",
            "dhcp_options_id": "dopt-0bb6bf2626d3217a9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-043e909c74bdae9b1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0807fe3e39e2f90ac",
            "owner_id": "390403881443",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "project-vpc"
            },
            "tags_all": {
              "Name": "project-vpc"
            }
          }
        }
      ]
    }
  ]
}